--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="product">
                 <img src="img/a.jpg" alt="">
                 <div class="p-details">
-                    <h2>Tshirt For Everyone</h2>
+                    <h2>Jeans For Everyone</h2>
                     <h3>$25</h3>
                 </div>
             </div>
@@ -41,49 +41,49 @@
             <div class="product">
                 <img src="img/d.jpg" alt="">
                 <div class="p-details">
-                    <h2>Tshirt For Everyone</h2>
+                    <h2>Jeans For Everyone</h2>
                     <h3>$25</h3>
                 </div>
             </div>
             <div class="product">
                 <img src="img/e.jpg" alt="">
                 <div class="p-details">
-                    <h2>Tshirt For Everyone</h2>
+                    <h2>Nike Shoe</h2>
                     <h3>$25</h3>
                 </div>
             </div>
             <div class="product">
                 <img src="img/f.jpg" alt="">
                 <div class="p-details">
-                    <h2>Tshirt For Everyone</h2>
+                    <h2>Jeans For Everyone</h2>
                     <h3>$25</h3>
                 </div>
             </div>
             <div class="product">
                 <img src="img/g.jpg" alt="">
                 <div class="p-details">
-                    <h2>Tshirt For Everyone</h2>
+                    <h2>Chelsea Boots</h2>
                     <h3>$25</h3>
                 </div>
             </div>
             <div class="product">
                 <img src="img/h.jpg" alt="">
                 <div class="p-details">
-                    <h2>Tshirt For Everyone</h2>
+                    <h2>Air Jordans</h2>
                     <h3>$25</h3>
                 </div>
             </div>
             <div class="product">
                 <img src="img/i.jpg" alt="">
                 <div class="p-details">
-                    <h2>Tshirt For Everyone</h2>
+                    <h2>Nike Shoe</h2>
                     <h3>$25</h3>
                 </div>
             </div>
             <div class="product">
                 <img src="img/j.jpg" alt="">
                 <div class="p-details">
-                    <h2>Tshirt For Everyone</h2>
+                    <h2>Air Jordans</h2>
                     <h3>$25</h3>
                 </div>
             </div>
